--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,10 @@ dependencies:
   easy_localization: ^3.0.7+1
   # For splash scree
   flutter_native_splash: ^2.4.6
+  # An SVG rendering and widget library for Flutter
+  flutter_svg: ^2.1.0
+  # A flutter plugin for adapting screen and font size
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
