--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  # A build system for Dart code generation and modular compilation.
+  build_runner: ^2.4.15
   # State managment
   flutter_bloc: ^9.1.1
   # Code generator (mainly used with cubit & retrefit )
